--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "Wine collection app for an Electron programming class",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "Katie Purdy",
   "license": "ISC",
   "devDependencies": {
     "electron": "10.1.2",
+    "electron-rebuild": "^2.3.2"
+  },
+  "dependencies": {
+    "electron-builder": "^22.9.1",
     "jquery": "^3.5.1",
-    "jquery-datepicker": "^1.12.3"
+    "jquery-datepicker": "^1.12.3",
+    "knex": "^0.21.7",
+    "sqlite3": "^5.0.0"
   }
 }
